--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
-    "expo": "~40.0.0",
+    "expo": "^40.0.1",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.2.5",
+    "install": "^0.13.0",
+    "node-pre-gyp": "^0.17.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -22,8 +25,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-vector-icons": "^8.0.0",
-    "react-native-web": "~0.13.12",
-    "firebase": "7.9.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
